--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "hexo": {
     "version": "3.7.1"
   },
+  "scripts": {
+    "start": "node node_modules/hexo/bin/hexo server",
+    "hexo": "node node_modules/hexo/bin/hexo"
+  },
   "dependencies": {
     "hexo": "^3.2.0",
     "hexo-deployer-git": "^0.3.1",
