--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "start": "node node_modules/hexo/bin/hexo server",
+    "deploy": "node node_modules/hexo/bin/hexo generate --deploy",
     "hexo": "node node_modules/hexo/bin/hexo"
   },
   "dependencies": {
