--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "version": "3.7.1"
   },
   "scripts": {
-    "start": "node node_modules/hexo/bin/hexo server",
-    "deploy": "node node_modules/hexo/bin/hexo generate --deploy",
-    "hexo": "node node_modules/hexo/bin/hexo"
+    "start": "hexo server",
+    "hexo": "hexo",
+    "clean": "hexo clean",
+    "generateAndDeploy": "hexo generate --deploy",
+    "deploy": "npm run clean && npm run generateAndDeploy"
   },
   "dependencies": {
     "hexo": "^3.2.0",
